[package]
name = "json-sink"
version = "0.1.0"
authors = ["nicholasf <nicholas.faiz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.12"
postgres = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
